fix: fixing z-index of header

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,6 +5,7 @@
     margin: 0 auto;
     box-sizing: border-box;
     background-color: #fff;
+    z-index: 2;
 }
 
 @media screen and (max-width: 1160px) {
